# ExpressionEvaluator

./: CMakeLists.txt  README.md
Deprecated/ExpressionParser/: CMakeLists.txt
Deprecated/ExpressionParser/Examples/Drawer/: CMakeLists.txt
Deprecated/ExpressionParser/Examples/Drawer/Include/: CCanvas.h  CUserInput.h
Deprecated/ExpressionParser/Examples/Drawer/Source/: CCanvas.cpp  CUserInput.cpp  main.cpp
Deprecated/ExpressionParser/Include/: CAddOperation.h  CCosFunction.h  CDivideOperation.h  CExpFunction.h  CExpression.h  CExpressionEvaluationManager.h  CLogFunction.h  CMultiplyOperation.h  CParameter.h  CPowerOperation.h  CRuntimeOperation.h  CSinFunction.h  CSubtractOperation.h  CTanFunction.h  CValue.h  IElement.h  IFunction.h  IOperation.h
Deprecated/ExpressionParser/Source/: CAddOperation.cpp  CCosFunction.cpp  CDivideOperation.cpp  CExpFunction.cpp  CExpression.cpp  CExpressionEvaluationManager.cpp  CLogFunction.cpp  CMultiplyOperation.cpp  CParameter.cpp  CPowerOperation.cpp  CRuntimeOperation.cpp  CSinFunction.cpp  CSubtractOperation.cpp  CTanFunction.cpp  CValue.cpp  IElement.cpp  IFunction.cpp  IOperation.cpp
Examples/EvaluatorQt/: CMakeLists.txt
Examples/EvaluatorQt/Include/: CCalculator.h
Examples/EvaluatorQt/Source/: CCalculator.cpp  main.cpp
Include/: ExpressionEvaluator.h
Source/: ExpressionEvaluator.cpp
